gh_pages/css/style.css
/* ... */
.code-wrapper.non-deduce ::-webkit-scrollbar-thumb {
  background-color: var(--gray);
  border-radius: 100px; }

/* non-deduce code blocks */
.code-wrapper.non-deduce {
  background-color: var(--very-light-gray); }
  .code-wrapper.non-deduce code {
    font-size: .9rem;
    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
    color: var(--black); }

/* small inline code blurbs */
code.inline {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  line-height: 0;
  border-radius: 4px;
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: var(--black);
  background-color: var(--very-light-gray); }
  code.inline a {
    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace; }

a code.inline {
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: var(--dark-blue); }

section {
  font-family: 'Inter', sans-serif; }
  section article h2,
  section article p,
  section article ol,
  section article ul {
    margin: 0;
    margin-top: 10px; }

section.about {
  background-color: var(--very-light-gray);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px;
  box-sizing: border-box;
  width: 100%; }
  section.about article:first-child {
    margin-top: 0; }
  section.about article {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 75px 40px 0;
    width: 100%;
    gap: 40px; }
    section.about article figure {
      margin: 0;
      font-size: 1.15rem; }
      section.about article figure h2 {
        font-size: 2rem;
        margin-bottom: 20px;
        margin-top: 0; }
    section.about article .code-wrapper {
      margin-top: 0; }
      section.about article .code-wrapper code .button-tooltip {
        top: -10px; }

section.blocks {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 30px;
  margin-top: 60px; }
  section.blocks article {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 45%;
    min-width: 300px;
    padding: 10px;
    /* border: solid 2px var(--blue); */
    /* border-radius: 10px; */ }
    section.blocks article h2 {
      font-size: 2rem;
      margin-bottom: 5px; }
    section.blocks article p {
      font-size: 1rem;
      line-height: 1.3; }
    section.blocks article p:last-of-type {
      margin-bottom: 20px; }
    section.blocks article .links {
      display: flex;
      gap: 20px; }
    section.blocks article .link-btn,
    section.blocks article .link-btn:link {
      border-color: var(--pink);
      color: var(--pink); }
    section.blocks article .link-btn:hover,
    section.blocks article .link-btn:active {
      background-color: var(--pink);
      color: var(--white); }

section.example {
  padding: 50px;
  margin: 0 auto;
  margin-top: 110px;
  background-color: var(--very-light-gray);
  max-width: 800px; }
  section.example h2 {
    margin-top: 0;
    margin-bottom: 25px;
    font-size: 2rem; }
  section.example p {
    margin-top: 0;
    margin-bottom: 50px; }
  section.example code.inline {
    background-color: var(--light-gray); }
  section.example .code-wrapper {
    margin: 0 auto; }

footer, deduce-footer {
  display: flex;
  justify-content: space-between;
  margin-top: 150px;
  border-top: solid 2px var(--blue);
  padding: 30px 0 50px;
  /* Invert colors on hover */ }
  footer .nav-logo, deduce-footer .nav-logo {
    margin-right: 50px; }
    footer .nav-logo svg, deduce-footer .nav-logo svg {
      width: var(--logo-width);
      height: calc(var(--logo-width) * 402 / 1668); }
      footer .nav-logo svg *, deduce-footer .nav-logo svg * {
        transition: fill var(--trans-duration); }
  footer .nav-logo:hover svg .blue, deduce-footer .nav-logo:hover svg .blue {
    fill: var(--purple); }
  footer .nav-logo:hover svg .purple, deduce-footer .nav-logo:hover svg .purple {
    fill: var(--blue); }
  footer .footer-links, deduce-footer .footer-links {
    display: flex;
    gap: 75px;
    flex-wrap: wrap; }
    footer .footer-links .footer-col, deduce-footer .footer-links .footer-col {
      display: flex;
      flex-direction: column;
      gap: 10px;
      font-family: 'Inter', sans-serif; }
      footer .footer-links .footer-col a:first-child,
      footer .footer-links .footer-col a:link:first-child, deduce-footer .footer-links .footer-col a:first-child,
      deduce-footer .footer-links .footer-col a:link:first-child {
        font-weight: bold;
        text-transform: uppercase; }
      footer .footer-links .footer-col a,
      footer .footer-links .footer-col a:link, deduce-footer .footer-links .footer-col a,
      deduce-footer .footer-links .footer-col a:link {
        display: block;
        text-decoration: none;
        color: var(--blue); }
      footer .footer-links .footer-col a:hover,
      footer .footer-links .footer-col a:active, deduce-footer .footer-links .footer-col a:hover,
      deduce-footer .footer-links .footer-col a:active {
        text-decoration: underline;
        /* color: var(--purple); */ }

table {
  margin-top: 30px;
  border-collapse: collapse; }
  table tr th {
    text-align: center; }
  table tr th,
  table tr td {
    margin: 0;
    padding: 10px 15px;
    border: solid var(--light-gray) 1px; }
  table tr:nth-child(even) {
    background-color: var(--very-lighter-gray); }

.cheat-sheet ol li {
  line-height: 1.5; }

.cheat-sheet table {
  margin-top: 50px; }

.md h2:first-of-type {
  margin-top: 40px; }

.md .code-wrapper {
  margin-top: 20px;
  margin-bottom: 20px; }

#sandbox {
  max-width: 1500px; }
  #sandbox h1 {
    margin: 10px 0;
    font-size: 2rem; }
  #sandbox .controls {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 10px;
    margin: 20px 0 10px;
    flex-wrap: wrap; }
    #sandbox .controls .coding {
      display: flex;
      gap: 8px; }
/* ... */

